--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -965,6 +965,9 @@
   "wallet.transaction.filter.resultInfo": "フィルター条件と一致するのは<b>{total}</b>トランザクション中<b>{filtered}</b>件です。",
   "wallet.transaction.filter.selectTimeRange": "期間を選択してください",
   "wallet.transaction.filter.thisYear": "今年",
+  "wallet.transaction.metadataConfirmationLabel": "!!!Show unmoderated content",
+  "wallet.transaction.metadataDisclaimer": "!!!Transaction metadata is not moderated and may contain inappropriate content. Lorem ipsum dolor sit amet.",
+  "wallet.transaction.metadataLabel": "!!!Transaction metadata",
   "wallet.transaction.noInputAddressesLabel": "アドレスなし",
   "wallet.transaction.pending.cancelPendingTxnNote": "このトランザクションは長時間処理中となっています。このトランザクションに使用されている資金を解放するために、トランザクションのキャンセルを試みることができます。",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "このトランザクションをキャンセルする理由",
