--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -135,6 +135,7 @@
   "global.errors.rewardsOpenCsvError": "置き換えようとしているファイルが開いています。ファイルを閉じてからもう一度お試しください。",
   "global.errors.strongSpendingPassword": "強い",
   "global.errors.weakSpendingPassword": "弱い",
+  "global.info.featureUnavailableWhileSyncing": "Daedalusは現在Cardanoブロックチェーンと同期中であり、<span>{syncPercentage}%</span>完了しています。この機能はDaedalusが完全に同期すると有効になります。",
   "global.info.knownMnemonicWordCount": "{actual}/{required}語入力済み",
   "global.info.unknownMnemonicWordCount": "{actual}語入力済み",
   "global.labels.all": "すべて",
@@ -424,7 +425,6 @@
   "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "ウォレット追加",
   "staking.redeemItnRewards.noWallets.description": "インセンティブ付きテストネットの還元機能はShelley対応のウォレットがないため利用できません。",
   "staking.redeemItnRewards.redemptionUnavailable.closeButton.label": "閉じる",
-  "staking.redeemItnRewards.redemptionUnavailable.description": "インセンティブ付きテストネットの報酬を還元するには、Daedalusがブロックチェーンと同期している必要があります。現在同期プロセスは進行中で、<b>{syncPercentage}%</b>完了しています。このプロセスが完了したら、インセンティブ付きテストネットの報酬を還元することができるようになります。ここで報酬を還元するのは、このプロセスが終了するまでお待ちください。",
   "staking.redeemItnRewards.redemptionUnavailable.title": "インセンティブ付きテストネットの報酬を還元する",
   "staking.redeemItnRewards.step1.checkbox1Label": "インセンティブ付きテストネットで獲得した報酬の還元には、トランザクション手数料を支払う必要があることを理解しました。",
   "staking.redeemItnRewards.step1.checkbox2Label": "手数料は報酬の振込先ウォレットから支払われることを理解しました。",
@@ -612,7 +612,6 @@
   "voting.info.learnMoreLinkUrl": "!!!https://cardano.ideascale.com/a/index",
   "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
   "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
-  "voting.unavailable.description": "Daedalusは現在Cardanoブロックチェーンと同期中であり、<b>{syncPercentage}%</b>完了しています。この機能はDaedalusが完全に同期すると有効になります。",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
   "voting.votingRegistration.chooseWallet.step.description": "!!!You can only use one wallet when registering.<br>To maximize rewards and voting power, choose your largest wallet.",
   "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "!!!This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
