--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -135,6 +135,7 @@
   "global.errors.rewardsOpenCsvError": "The file you are trying to replace is open. Please close it and try again.",
   "global.errors.strongSpendingPassword": "Strong",
   "global.errors.weakSpendingPassword": "Weak",
+  "global.info.featureUnavailableWhileSyncing": "Daedalus is synchronizing with the Cardano blockchain, and the process is currently <b>{syncPercentage}%</b> complete. This feature will become available once Daedalus is fully synchronized.",
   "global.info.knownMnemonicWordCount": "{actual} of {required} {required, plural, one {word} other {words}} entered",
   "global.info.unknownMnemonicWordCount": "{actual} {actual, plural, one {word} other {words}} entered",
   "global.labels.all": "All",
@@ -424,7 +425,6 @@
   "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "Add wallet",
   "staking.redeemItnRewards.noWallets.description": "Redemption of Incentivized Testnet rewards is not available as you currently do not have any Shelley-compatible wallets.",
   "staking.redeemItnRewards.redemptionUnavailable.closeButton.label": "Close",
-  "staking.redeemItnRewards.redemptionUnavailable.description": "Before you can redeem your Incentivized Testnet rewards, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to redeem your Incentivized Testnet rewards. Please wait for this process to complete before returning here to redeem your rewards.",
   "staking.redeemItnRewards.redemptionUnavailable.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
@@ -612,7 +612,6 @@
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
   "voting.info.stepTitle1": "Decide how to allocate $200K for innovative ideas to improve Cardano.",
   "voting.info.stepTitle2": "$70,000 worth of ada rewards will be distributed between all who register.",
-  "voting.unavailable.description": "Daedalus is synchronizing with the Cardano blockchain, and the process is currently <b>{syncPercentage}%</b> complete. This feature will become available once Daedalus is fully synchronized.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
   "voting.votingRegistration.chooseWallet.step.description": "You can only use one wallet when registering.<br>To maximize rewards and voting power, choose your largest wallet.",
   "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
