--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -610,10 +610,10 @@
   "voting.info.heading": "Register to vote on Fund3",
   "voting.info.learnMoreLinkLabel": "Learn more",
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
-  "voting.info.stepTitle1": "Decide how to allocate $200K for innovative ideas to improve Cardano.",
-  "voting.info.stepTitle2": "$70,000 worth of ada rewards will be distributed between all who register.",
+  "voting.info.stepTitle1": "Decide which innovative ideas to improve Cardano will receive funding.",
+  "voting.info.stepTitle2": "$70.000 worth of ada rewards will be distributed between ada holders who register their vote.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
-  "voting.votingRegistration.chooseWallet.step.description": "You can only use one wallet when registering.<br>To maximize rewards and voting power, choose your largest wallet.",
+  "voting.votingRegistration.chooseWallet.step.description": "You can only use one wallet when registering. To maximize rewards and voting power, choose your largest wallet.",
   "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
   "voting.votingRegistration.chooseWallet.step.errorLegacyWallet": "This wallet cannot be registered for voting because it is a legacy Byron wallet.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum required amount of <span>{minVotingRegistrationFunds} ADA</span>. Please select a different wallet with <span>a minimum balance of {minVotingRegistrationFunds} ADA</span>.",
@@ -625,7 +625,7 @@
   "voting.votingRegistration.confirm.step.continueButtonLabel": "Continue",
   "voting.votingRegistration.confirm.step.description": "Approximately 5 minutes of waiting is required for your voting registration to be confirmed. Please leave Daedalus running.",
   "voting.votingRegistration.confirm.step.descriptionRestart": "Please restart the registration process by clicking the <span>Restart registration</span> button.",
-  "voting.votingRegistration.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
+  "voting.votingRegistration.confirm.step.errorMessage": "Voting registration was not completed correctly.",
   "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart registration",
   "voting.votingRegistration.confirm.step.transactionPendingLabel": "Transaction pending...",
   "voting.votingRegistration.confirm.step.waitingForConfirmationsLabel": "Waiting for confirmations...",
@@ -654,7 +654,7 @@
   "voting.votingRegistration.register.step.description": "Please sign the voting registration transaction to link your wallet balance with your Fund3 voting registration as a proof of your voting power. No funds will leave your wallet but registering requires paying transaction fees displayed on the screen.",
   "voting.votingRegistration.register.step.feesLabel": "Fees",
   "voting.votingRegistration.register.step.learnMoreLink": "Learn more",
-  "voting.votingRegistration.register.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
+  "voting.votingRegistration.register.step.learntMoreLinkUrl": "https://cardano.ideascale.com/a/index",
   "voting.votingRegistration.register.step.spendingPasswordLabel": "Spending password",
   "voting.votingRegistration.register.step.spendingPasswordPlaceholder": "Spending password",
   "voting.votingRegistration.steps.step.1.label": "Wallet",
