--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -610,6 +610,9 @@
   "voting.info.heading": "Register to vote on Fund3",
   "voting.info.learnMoreLinkLabel": "Learn more",
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
+  "voting.info.noWallets.createWalletButtonLabel": "Create a wallet",
+  "voting.info.noWallets.headLine": "Voting registration for Fund3 is not available because you currently do not have any Shelley-compatible wallets.",
+  "voting.info.noWallets.instructions": "Create a new wallet and transfer a minimum of {minVotingFunds} ADA (or restore an existing wallet with funds), then return here to register for voting.",
   "voting.info.stepTitle1": "Decide which innovative ideas to improve Cardano will receive funding.",
   "voting.info.stepTitle2": "$70.000 worth of ada rewards will be distributed between ada holders who register their vote.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
@@ -629,8 +632,7 @@
   "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart registration",
   "voting.votingRegistration.confirm.step.transactionPendingLabel": "Transaction pending...",
   "voting.votingRegistration.confirm.step.waitingForConfirmationsLabel": "Waiting for confirmations...",
-  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabel": "Close window",
-  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabelVariation": "Close Daedalus",
+  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabel": "Abort registration",
   "voting.votingRegistration.dialog.confirmation.button.confirmButtonLabel": "Continue registration",
   "voting.votingRegistration.dialog.confirmation.content": "Are you sure that you want to abort Fund3 voting registration? The transaction fee you paid for the voting registration will go to waste and you will need to start the registration from the beginning if you decide to register for Fund3 voting.",
   "voting.votingRegistration.dialog.confirmation.headline": "Abort Fund3 Voting Registration?",
